header part complete

--- a/index.html
+++ b/index.html
@@ -6,13 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <!-- font awesome -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+
+    <!-- font icon -->
+    <script src="https://kit.fontawesome.com/89fc10558f.js" crossorigin="anonymous"></script>
+
+    <!-- css link -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>
-        Influencer
-    </h1>
+    <header class="header-tag">
+        <div class="influncer-part">
+            <h1>Influencer products</h1>
+        </div>
+        <div class="icon-design">
+            <a href="">Home </a>
+            <a href="">Products</a>
+            <a href="">Sign Up</a>
+            <a href="">Log in</a>
+            <a href=""><i class="far fa-search"></i></a>
+            <a href=""><i class="fas fa-shopping-cart"></i></a>
+        </div>
+
+    </header>
+    <main>
+        <section class="container">
+            <div class="half-width">
+                <h2>Start your Journey as
+                    Influencer</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
+                    faucibus.</p>
+                <button>Preebook now</button>
+
+            </div>
+            <div class="half-width">
+                <img src="images/camera.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
