--- a/index.html
+++ b/index.html
@@ -28,23 +28,144 @@
             <a href="">Products</a>
             <a href="">Sign Up</a>
             <a href="">Log in</a>
-            <a href=""><i class="far fa-search"></i></a>
+            <a href=""><i class="fas fa-search"></i></a>
             <a href=""><i class="fas fa-shopping-cart"></i></a>
         </div>
 
     </header>
     <main>
         <section class="container">
-            <div class="half-width">
-                <h2>Start your Journey as
-                    Influencer</h2>
+            <div class="half-width journey-part">
+                <h3>Start your Journey as
+                    Influencer</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
                     faucibus.</p>
-                <button>Preebook now</button>
+                <button class="button">Preebook now <i class="fas fa-arrow-right"></i></button>
 
             </div>
-            <div class="half-width">
-                <img src="images/camera.png" alt="">
+            <div class="half-width ">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </section>
+        <section class="logos">
+            <hr>
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+            <hr>
+        </section>
+        <!---------------------
+         Popular section part 
+        ----------------------->
+        <section class="popular-section">
+            <h2>Popular Collection</h2>
+            <div class="boxes">
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                        <p>Wordwide shifting <br> available <br>
+                            Buyers protection possible!</p>
+                    </div>
+
+
+                </div>
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                    </div>
+
+
+                </div>
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                    </div>
+
+
+                </div>
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                    </div>
+
+
+                </div>
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                    </div>
+
+
+                </div>
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                    </div>
+
+
+                </div>
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                    </div>
+
+
+                </div>
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                    </div>
+
+
+                </div>
+                <div class="box-popular">
+                    <div class="box">
+                        <img src="images/tripod.png" alt="">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <p></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                                class="fas fa-star"></i><i class="fas fa-star-half-alt"></i></p>
+                    </div>
+
+
+                </div>
+
             </div>
         </section>
     </main>
